Redo undone template creation fails assertion
Affected version
- Nightly flatpak: 43.beta
- Other: 42.2
Steps to reproduce
- Create template
- Undo create template (note that this is a "permanent" deletion)
- Redo create template (usually permanents deletes do not allow redo)
Current behavior
Crash
Expected behavior
Additional information
#0 0x00007f6327bbce3c in __pthread_kill_implementation () at /lib64/libc.so.6
#1 0x00007f6327b6ca16 in raise () at /lib64/libc.so.6
#2 0x00007f6327b5682f in abort () at /lib64/libc.so.6
#3 0x00007f6328cc2d18 in g_assertion_message_expr[cold] () at /lib64/libglib-2.0.so.0
#4 0x00007f6328d22bae in g_assertion_message_expr () at /lib64/libglib-2.0.so.0
#5 0x0000000000462d0e in create_task_thread_func
(task=0x1e524b0, source_object=0x0, task_data=0x1e84f50, cancellable=0x1e6f3a0) at ../src/nautilus-file-operations.c:7820
#6 0x00007f63281a1c43 in g_task_thread_pool_thread () at /lib64/libgio-2.0.so.0
#7 0x00007f6328d25d02 in g_thread_pool_thread_proxy.lto_priv () at /lib64/libglib-2.0.so.0
#8 0x00007f6328d23302 in g_thread_proxy () at /lib64/libglib-2.0.so.0
#9 0x00007f6327bbb017 in start_thread () at /lib64/libc.so.6
#10 0x00007f6327c406d0 in clone3 () at /lib64/libc.so.6
Edited by Corey Berla