nautilus-file-undo-operations.c: Use base file name for template redo

Currently, Nautilus crashes for redo operations after undoing a template create.

This is because we are passing the parse path, but we expect the base name for the redo operation.

To fix this, use g_file_get_basename instead of g_file_get_parse_name.

Closes https://gitlab.gnome.org/GNOME/nautilus/-/issues/2344