src/nautilus-file-undo-operations.c
@@ -872,7 +872,7 @@ create_from_template_redo_func (NautilusFileUndoInfoCreate     *self,
 
     parent = g_file_get_parent (self->target_file);
     parent_uri = g_file_get_uri (parent);
-    new_name = g_file_get_parse_name (self->target_file);
+    new_name = g_file_get_basename (self->target_file);
     nautilus_file_operations_new_file_from_template (NULL,
                                                      parent_uri, new_name,
                                                      self->template,
